--- a/DZ/DZ.csproj
+++ b/DZ/DZ.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7EFB9C73-5888-45B7-910E-CDE7827571A6}</ProjectGuid>
+    <ProjectGuid>{073AC4D6-9891-45D3-8F27-1A6DD6B4EA96}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_7Dz</RootNamespace>
-    <AssemblyName>7Dz</AssemblyName>
+    <RootNamespace>DZ</RootNamespace>
+    <AssemblyName>DZ</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,14 +45,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tip\Schet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TextFile1.txt" />
-    <Content Include="TextFile2.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
